// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`The RegistrationDbProxy stack matches the snapshot on CODE 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuVpcParameter",
      "GuSubnetListParameter",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "RegistrationsDbProxyId": {
      "Description": "ID of RDS proxy to registrations database",
      "Export": {
        "Name": "RegistrationsDbProxyId-CODE",
      },
      "Value": {
        "Fn::Join": [
          "",
          [
            "arn:aws:rds-db:",
            {
              "Ref": "AWS::Region",
            },
            ":",
            {
              "Ref": "AWS::AccountId",
            },
            ":dbuser:",
            {
              "Fn::Select": [
                6,
                {
                  "Fn::Split": [
                    ":",
                    {
                      "Fn::GetAtt": [
                        "RegistrationsDbProxyBAD96AA8",
                        "DBProxyArn",
                      ],
                    },
                  ],
                },
              ],
            },
            "/*",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "VpcId": {
      "AllowedValues": [
        "/account/vpc/notifications/id",
      ],
      "Default": "/account/vpc/notifications/id",
      "Description": "Virtual Private Cloud to run EC2 instances within. Should NOT be the account default VPC.",
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::VPC::Id>",
    },
    "registrationsdbproxyPrivateSubnets": {
      "AllowedValues": [
        "/account/vpc/notifications/subnets/private",
      ],
      "Default": "/account/vpc/notifications/subnets/private",
      "Description": "A list of private subnets",
      "Type": "AWS::SSM::Parameter::Value<List<AWS::EC2::Subnet::Id>>",
    },
  },
  "Resources": {
    "RegistrationDbCleanerSecretD579A6EA": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Description": "Secrets for accessing registration database from cleaner lambdas",
        "GenerateSecretString": {
          "GenerateStringKey": "password",
          "SecretStringTemplate": "{"username":"cleaner_user","engine":"postgres","host":"notifications-registrations-db-private-code.crwidilr2ofx.eu-west-1.rds.amazonaws.com","port":5432,"dbname":"registrationsCODE","dbInstanceIdentifier":"notifications-registrations-db-private-code"}",
        },
        "Name": "registrations-db-cleaner-secret-CODE",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
    "RegistrationDbWorkerSecretD41732AB": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Description": "Secrets for accessing registration database from worker lambdas",
        "GenerateSecretString": {
          "GenerateStringKey": "password",
          "SecretStringTemplate": "{"username":"worker_user","engine":"postgres","host":"notifications-registrations-db-private-code.crwidilr2ofx.eu-west-1.rds.amazonaws.com","port":5432,"dbname":"registrationsCODE","dbInstanceIdentifier":"notifications-registrations-db-private-code"}",
        },
        "Name": "registrations-db-worker-secret-CODE",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
    "RegistrationsDbProxyBAD96AA8": {
      "Properties": {
        "Auth": [
          {
            "AuthScheme": "SECRETS",
            "IAMAuth": "DISABLED",
            "SecretArn": {
              "Ref": "RegistrationDbWorkerSecretD41732AB",
            },
          },
          {
            "AuthScheme": "SECRETS",
            "IAMAuth": "DISABLED",
            "SecretArn": {
              "Ref": "RegistrationDbCleanerSecretD579A6EA",
            },
          },
        ],
        "DBProxyName": "registrations-db-proxy-cdk-CODE",
        "EngineFamily": "POSTGRESQL",
        "RequireTLS": false,
        "RoleArn": {
          "Fn::GetAtt": [
            "RegistrationsDbProxyIAMRoleF3BC5484",
            "Arn",
          ],
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
        "VpcSecurityGroupIds": [
          "sg-0a228b61bbf4a0e6a",
        ],
        "VpcSubnetIds": {
          "Ref": "registrationsdbproxyPrivateSubnets",
        },
      },
      "Type": "AWS::RDS::DBProxy",
    },
    "RegistrationsDbProxyIAMRoleDefaultPolicyCE03926E": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Ref": "RegistrationDbWorkerSecretD41732AB",
              },
            },
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Ref": "RegistrationDbCleanerSecretD579A6EA",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "RegistrationsDbProxyIAMRoleDefaultPolicyCE03926E",
        "Roles": [
          {
            "Ref": "RegistrationsDbProxyIAMRoleF3BC5484",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "RegistrationsDbProxyIAMRoleF3BC5484": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "rds.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "RegistrationsDbProxyProxyTargetGroupDDA34D50": {
      "Properties": {
        "ConnectionPoolConfigurationInfo": {
          "MaxConnectionsPercent": 90,
        },
        "DBInstanceIdentifiers": [
          "notifications-registrations-db-private-code",
        ],
        "DBProxyName": {
          "Ref": "RegistrationsDbProxyBAD96AA8",
        },
        "TargetGroupName": "default",
      },
      "Type": "AWS::RDS::DBProxyTargetGroup",
    },
    "registrationsdbsecuritygroupfromRegistrationDbProxyCODEregistrationsdbsecuritygroup14CF94DB54323FFA1BF5": {
      "Properties": {
        "Description": "Allow connections to the database Instance from the Proxy",
        "FromPort": 5432,
        "GroupId": "sg-0a228b61bbf4a0e6a",
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": "sg-0a228b61bbf4a0e6a",
        "ToPort": 5432,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
  },
}
`;

exports[`The RegistrationDbProxy stack matches the snapshot on PROD 1`] = `
{
  "Metadata": {
    "gu:cdk:constructs": [
      "GuVpcParameter",
      "GuSubnetListParameter",
    ],
    "gu:cdk:version": "TEST",
  },
  "Outputs": {
    "RegistrationsDbProxyId": {
      "Description": "ID of RDS proxy to registrations database",
      "Export": {
        "Name": "RegistrationsDbProxyId-PROD",
      },
      "Value": {
        "Fn::Join": [
          "",
          [
            "arn:aws:rds-db:",
            {
              "Ref": "AWS::Region",
            },
            ":",
            {
              "Ref": "AWS::AccountId",
            },
            ":dbuser:",
            {
              "Fn::Select": [
                6,
                {
                  "Fn::Split": [
                    ":",
                    {
                      "Fn::GetAtt": [
                        "RegistrationsDbProxyBAD96AA8",
                        "DBProxyArn",
                      ],
                    },
                  ],
                },
              ],
            },
            "/*",
          ],
        ],
      },
    },
  },
  "Parameters": {
    "VpcId": {
      "AllowedValues": [
        "/account/vpc/notifications/id",
      ],
      "Default": "/account/vpc/notifications/id",
      "Description": "Virtual Private Cloud to run EC2 instances within. Should NOT be the account default VPC.",
      "Type": "AWS::SSM::Parameter::Value<AWS::EC2::VPC::Id>",
    },
    "registrationsdbproxyPrivateSubnets": {
      "AllowedValues": [
        "/account/vpc/notifications/subnets/private",
      ],
      "Default": "/account/vpc/notifications/subnets/private",
      "Description": "A list of private subnets",
      "Type": "AWS::SSM::Parameter::Value<List<AWS::EC2::Subnet::Id>>",
    },
  },
  "Resources": {
    "RegistrationDbCleanerSecretD579A6EA": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Description": "Secrets for accessing registration database from cleaner lambdas",
        "GenerateSecretString": {
          "GenerateStringKey": "password",
          "SecretStringTemplate": "{"username":"cleaner_user","engine":"postgres","host":"notifications-registrations-db-private-prod.crwidilr2ofx.eu-west-1.rds.amazonaws.com","port":5432,"dbname":"registrationsPROD","dbInstanceIdentifier":"notifications-registrations-db-private-prod"}",
        },
        "Name": "registrations-db-cleaner-secret-PROD",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
    "RegistrationDbWorkerSecretD41732AB": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Description": "Secrets for accessing registration database from worker lambdas",
        "GenerateSecretString": {
          "GenerateStringKey": "password",
          "SecretStringTemplate": "{"username":"worker_user","engine":"postgres","host":"notifications-registrations-db-private-prod.crwidilr2ofx.eu-west-1.rds.amazonaws.com","port":5432,"dbname":"registrationsPROD","dbInstanceIdentifier":"notifications-registrations-db-private-prod"}",
        },
        "Name": "registrations-db-worker-secret-PROD",
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SecretsManager::Secret",
      "UpdateReplacePolicy": "Delete",
    },
    "RegistrationsDbProxyBAD96AA8": {
      "Properties": {
        "Auth": [
          {
            "AuthScheme": "SECRETS",
            "IAMAuth": "DISABLED",
            "SecretArn": {
              "Ref": "RegistrationDbWorkerSecretD41732AB",
            },
          },
          {
            "AuthScheme": "SECRETS",
            "IAMAuth": "DISABLED",
            "SecretArn": {
              "Ref": "RegistrationDbCleanerSecretD579A6EA",
            },
          },
        ],
        "DBProxyName": "registrations-db-proxy-cdk-PROD",
        "EngineFamily": "POSTGRESQL",
        "RequireTLS": false,
        "RoleArn": {
          "Fn::GetAtt": [
            "RegistrationsDbProxyIAMRoleF3BC5484",
            "Arn",
          ],
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
        "VpcSecurityGroupIds": [
          "sg-01ee0bddb42ead7e5",
        ],
        "VpcSubnetIds": {
          "Ref": "registrationsdbproxyPrivateSubnets",
        },
      },
      "Type": "AWS::RDS::DBProxy",
    },
    "RegistrationsDbProxyIAMRoleDefaultPolicyCE03926E": {
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Ref": "RegistrationDbWorkerSecretD41732AB",
              },
            },
            {
              "Action": [
                "secretsmanager:GetSecretValue",
                "secretsmanager:DescribeSecret",
              ],
              "Effect": "Allow",
              "Resource": {
                "Ref": "RegistrationDbCleanerSecretD579A6EA",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "RegistrationsDbProxyIAMRoleDefaultPolicyCE03926E",
        "Roles": [
          {
            "Ref": "RegistrationsDbProxyIAMRoleF3BC5484",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "RegistrationsDbProxyIAMRoleF3BC5484": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "rds.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Tags": [
          {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          {
            "Key": "gu:repo",
            "Value": "guardian/mobile-n10n",
          },
          {
            "Key": "Stack",
            "Value": "mobile-notifications",
          },
          {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "RegistrationsDbProxyProxyTargetGroupDDA34D50": {
      "Properties": {
        "ConnectionPoolConfigurationInfo": {
          "MaxConnectionsPercent": 90,
        },
        "DBInstanceIdentifiers": [
          "notifications-registrations-db-private-prod",
        ],
        "DBProxyName": {
          "Ref": "RegistrationsDbProxyBAD96AA8",
        },
        "TargetGroupName": "default",
      },
      "Type": "AWS::RDS::DBProxyTargetGroup",
    },
    "registrationsdbsecuritygroupfromRegistrationDbProxyPRODregistrationsdbsecuritygroup8D9DEF405432C98C6D17": {
      "Properties": {
        "Description": "Allow connections to the database Instance from the Proxy",
        "FromPort": 5432,
        "GroupId": "sg-01ee0bddb42ead7e5",
        "IpProtocol": "tcp",
        "SourceSecurityGroupId": "sg-01ee0bddb42ead7e5",
        "ToPort": 5432,
      },
      "Type": "AWS::EC2::SecurityGroupIngress",
    },
  },
}
`;
